# django-muxins

./: LICENSE  README.rst  setup.cfg
utils/: middleware.py  mixins.py  utils.py  validators.py
utils/management/commands/: overhaul.py  shell.py
